--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "watch:css": "sass --watch src/assets/style/style.scss:public/style.css"
+    "watch:css": "sass --watch src/assets/style/style.scss:public/style.css --no-source-map --style=compressed"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
@@ -17,6 +17,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-error-boundary": "^4.0.13",
+    "react-hook-form": "^7.52.2",
     "react-redux": "^9.1.2",
     "react-router": "^6.25.1",
     "react-router-dom": "^6.25.1"
@@ -29,6 +30,7 @@
     "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "sass": "^1.77.8",
     "vite": "^5.3.4"
   }
 }
